# _clientServerPipe

./: CMakeLists.txt  README.md
finalTask/: CMakeLists.txt
finalTask/Header/: client.h  controler.h  display.h  network.h  pipe.h  server.h
finalTask/Srouce/: client.cc  client.cpp  controler.cc  controler.cpp  display.cc  display.cpp  main.cc  main.cpp  pipe.cc  pipe.cpp  server.cc  server.cpp
